transformed java8 code to java17